# FYS4411

project1/: .bashrc  README.md  README.org  makefile  requirements.txt
project1/include/Hamiltonians/: elliptical.h  hamiltonian.h  harmonicoscillator.h
project1/include/WaveFunctions/: interactive.h  simplegaussian.h  wavefunction.h
project1/include/project1/: constants.h  parameters.h  random_engine.h  sampler.h  system.h  system_enum.h
project1/include/project1/wave_functions/: interactive_elliptical.h  simple.h  simple_analytical.h  simple_numerical.h  wave_function.h
project1/output/data/: energy_values.tsv
project1/src/: analysis.py  blocking.py  constants.cpp  main.cpp  parameters.cpp  particle.cpp  plot.py  random_engine.cpp  sampler.cpp  system.cpp  system_enum.cpp
project1/src/Hamiltonians/: elliptical.cpp  hamiltonian.cpp  harmonicoscillator.cpp
project1/src/InitialStates/: initialstate.cpp  randomuniform.cpp
project1/src/WaveFunctions/: interactive.cpp  simplegaussian.cpp  wavefunction.cpp
project1/src/wave_functions/: interactive_elliptical.cpp  simple.cpp  simple_analytical.cpp  simple_numerical.cpp
project2/: Cargo.toml  README.md
project2/src/: analysis.py  args.rs  blocking.py  boltzmann.rs  lib.rs  main.rs  monte_carlo.rs  wave_function.rs
project2/src/optimizer/: adam.rs  gradient_descent.rs  mod.rs
project2/src/sampler/: brute_force.rs  importance.rs  mod.rs
