[package]
name = "project2"
version = "0.1.0"
edition = "2021"

# [profile.dev]
# opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
colored = "2.0.0"
clap = { version = "3", features = ["derive"] }
strum = { version = "0.24.0", features = ["derive"] }

ndarray = {version = "0.15.4", features = ["blas"]}
ndarray-linalg = "0.14.1"
ndarray-rand = "0.14.0"
tinymt = "1.0.6"
